--- a/Admin/package.json
+++ b/Admin/package.json
@@ -22,6 +22,8 @@
     "bootstrap-icons": "^1.11.3",
     "jspdf": "^2.5.1",
     "mdb-react-ui-kit": "^7.2.0",
+    "nodemailer": "^6.9.12",
+    "randomstring": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
