--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,11 +15,14 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
+    "randomstring": "^1.3.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1"
   }
